--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ deploy:
     tags: true
     all_branches: true
   skip_existing: true
-  server: https://test.pypi.org
+  server: https://test.pypi.org/legacy/
